# ClawLab

./: .gitignore  MVP.md  README.md  ROADMAP.md  pyproject.toml  整体设计.md
clawlab/: __init__.py
clawlab/cli/: __init__.py  main.py
clawlab/core/: __init__.py  constants.py  models.py
clawlab/prompts/: __init__.py  drafts.py  learning.py  materials.py  planning.py
clawlab/services/: __init__.py  asset_service.py  company_service.py  context_service.py  draft_service.py  employee_service.py  ingest_service.py  learning_service.py  llm_service.py  manager_service.py  material_service.py  planning_service.py  profile_service.py  project_service.py  workspace_service.py
clawlab/storage/: __init__.py  filesystem.py
clawlab/templates/: __init__.py  drafts.py
clawlab/utils/: __init__.py  ids.py  text.py
docs/: architecture-diagram.md  collaboration-protocol.md  company-mapping.md  company-onboarding.md  current-kernel.md  employees.md  intelligence-modes.md  manager-layer.md  memory-and-training.md
examples/: cv.txt  material_sample_source.ps  project_brief.md  revised_outline.md  task_input.txt
tests/: __init__.py  test_services.py
workspace/: README.md
